# hdhomerun-config-gtk

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  index.html  meson.build  meson_options.txt
.github/workflows/: ci.yml  release.yml
data/: com.github.andrewstclair.HDHomeRunConfig.desktop.in  com.github.andrewstclair.HDHomeRunConfig.gschema.xml  com.github.andrewstclair.HDHomeRunConfig.metainfo.xml.in  meson.build
data/icons/: meson.build
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  meson.build
src/: hdhomerun-application.c  hdhomerun-application.h  hdhomerun-device-row.c  hdhomerun-device-row.h  hdhomerun-tuner-controls.c  hdhomerun-tuner-controls.h  hdhomerun-tuner-controls.ui  hdhomerun-tuner-row.c  hdhomerun-tuner-row.h  hdhomerun-window.c  hdhomerun-window.h  hdhomerun-window.ui  hdhomerun.gresource.xml  main.c  meson.build
