install_data('hicolor/scalable/apps/com.github.andrewstclair.HDHomeRunConfig.svg',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/scalable/apps')
)

install_data('hicolor/symbolic/apps/com.github.andrewstclair.HDHomeRunConfig-symbolic.svg',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/symbolic/apps')
)
